frontend_tests/negative/assignment_target/go.mod
module example.com/renvotests/negative/assignment_target

go 1.25
